original-headers/tcqdb.h


typedef struct {                         
  void *mmtx;                            
  TCBDB *idx;                            
  bool open;                             
  TCMAP *cc;                             
  uint64_t icsiz;                        
  uint32_t lcnum;                        
  TCMAP *dtokens;                        
  struct _TCIDSET *dids;                 
  uint32_t etnum;                        
  uint8_t opts;                          
  uint32_t fwmmax;                       
  bool (*synccb)(int, int, const char *, void *);  
  void *syncopq;                         
} TCQDB;
enum {                                   
  QDBSSUBSTR,                            
  QDBSPREFIX,                            
  QDBSSUFFIX,                            
  QDBSFULL                               
};
void tcqdbsetsynccb(TCQDB *qdb, bool (*cb)(int, int, const char *, void *), void *opq);