original-headers/laputa.h


#define JDBWDBMAX      32                
typedef struct {                         
  void *mmtx;                            
  char *path;                            
  bool wmode;                            
  uint8_t wopts;                         
  int womode;                            
  TCHDB *txdb;                           
  TCBDB *lsdb;                           
  TCWDB *idxs[JDBWDBMAX];                
  uint8_t inum;                          
  uint8_t cnum;                          
  uint32_t ernum;                        
  uint32_t etnum;                        
  uint64_t iusiz;                        
  uint8_t opts;                          
  bool (*synccb)(int, int, const char *, void *);  
  void *syncopq;                         
  uint8_t exopts;                        
} TCJDB;
enum {                                   
  JDBTLARGE = 1 << 0,                    
  JDBTDEFLATE = 1 << 1,                  
  JDBTBZIP = 1 << 2,                     
  JDBTTCBS = 1 << 3                      
};
enum {                                   
  JDBOREADER = 1 << 0,                   
  JDBOWRITER = 1 << 1,                   
  JDBOCREAT = 1 << 2,                    
  JDBOTRUNC = 1 << 3,                    
  JDBONOLCK = 1 << 4,                    
  JDBOLCKNB = 1 << 5                     
};
enum {                                   
  JDBSSUBSTR,                            
  JDBSPREFIX,                            
  JDBSSUFFIX,                            
  JDBSFULL                               
};
const char *tcjdberrmsg(int ecode);
TCJDB *tcjdbnew(void);
void tcjdbdel(TCJDB *jdb);
int tcjdbecode(TCJDB *jdb);
bool tcjdbtune(TCJDB *jdb, int64_t ernum, int64_t etnum, int64_t iusiz, uint8_t opts);
bool tcjdbsetcache(TCJDB *jdb, int64_t icsiz, int32_t lcnum);
bool tcjdbsetfwmmax(TCJDB *jdb, uint32_t fwmmax);
bool tcjdbopen(TCJDB *jdb, const char *path, int omode);
bool tcjdbclose(TCJDB *jdb);
bool tcjdbput(TCJDB *jdb, int64_t id, const TCLIST *words);
bool tcjdbput2(TCJDB *jdb, int64_t id, const char *text, const char *delims);
bool tcjdbout(TCJDB *jdb, int64_t id);
TCLIST *tcjdbget(TCJDB *jdb, int64_t id);
char *tcjdbget2(TCJDB *jdb, int64_t id);
uint64_t *tcjdbsearch(TCJDB *jdb, const char *word, int smode, int *np);
uint64_t *tcjdbsearch2(TCJDB *jdb, const char *expr, int *np);
bool tcjdbiterinit(TCJDB *jdb);
uint64_t tcjdbiternext(TCJDB *jdb);
bool tcjdbsync(TCJDB *jdb);
bool tcjdboptimize(TCJDB *jdb);
bool tcjdbvanish(TCJDB *jdb);
bool tcjdbcopy(TCJDB *jdb, const char *path);
const char *tcjdbpath(TCJDB *jdb);
uint64_t tcjdbrnum(TCJDB *jdb);
uint64_t tcjdbfsiz(TCJDB *jdb);
void tcjdbsetsynccb(TCJDB *jdb, bool (*cb)(int, int, const char *, void *), void *opq);