original-headers/tcwdb.h


#define WDBSPCCHARS    "\b\t\n\v\f\r "   
typedef struct {                         
  void *mmtx;                            
  TCBDB *idx;                            
  bool open;                             
  TCMAP *cc;                             
  uint64_t icsiz;                        
  uint32_t lcnum;                        
  TCMAP *dtokens;                        
  struct _TCIDSET *dids;                 
  uint32_t etnum;                        
  uint8_t opts;                          
  uint32_t fwmmax;                       
  bool (*synccb)(int, int, const char *, void *);  
  void *syncopq;                         
  bool (*addcb)(const char *, void *);   
  void *addopq;                          
} TCWDB;
enum {                                   
  WDBTLARGE = 1 << 0,                    
  WDBTDEFLATE = 1 << 1,                  
  WDBTBZIP = 1 << 2,                     
  WDBTTCBS = 1 << 3                      
};
enum {                                   
  WDBOREADER = 1 << 0,                   
  WDBOWRITER = 1 << 1,                   
  WDBOCREAT = 1 << 2,                    
  WDBOTRUNC = 1 << 3,                    
  WDBONOLCK = 1 << 4,                    
  WDBOLCKNB = 1 << 5                     
};
enum {                                   
  WDBSSUBSTR,                            
  WDBSPREFIX,                            
  WDBSSUFFIX,                            
  WDBSFULL                               
};
const char *tcwdberrmsg(int ecode);
TCWDB *tcwdbnew(void);
void tcwdbdel(TCWDB *wdb);
int tcwdbecode(TCWDB *wdb);
bool tcwdbtune(TCWDB *wdb, int64_t etnum, uint8_t opts);
bool tcwdbsetcache(TCWDB *wdb, int64_t icsiz, int32_t lcnum);
bool tcwdbsetfwmmax(TCWDB *wdb, uint32_t fwmmax);
bool tcwdbopen(TCWDB *wdb, const char *path, int omode);
bool tcwdbclose(TCWDB *wdb);
bool tcwdbput(TCWDB *wdb, int64_t id, const TCLIST *words);
bool tcwdbput2(TCWDB *wdb, int64_t id, const char *text, const char *delims);
bool tcwdbout(TCWDB *wdb, int64_t id, const TCLIST *words);
bool tcwdbout2(TCWDB *wdb, int64_t id, const char *text, const char *delims);
uint64_t *tcwdbsearch(TCWDB *wdb, const char *word, int *np);
bool tcwdbsync(TCWDB *wdb);
bool tcwdboptimize(TCWDB *wdb);
bool tcwdbvanish(TCWDB *wdb);
bool tcwdbcopy(TCWDB *wdb, const char *path);
const char *tcwdbpath(TCWDB *wdb);
uint64_t tcwdbtnum(TCWDB *wdb);
uint64_t tcwdbfsiz(TCWDB *wdb);
void tcwdbsetdbgfd(TCWDB *wdb, int fd);
int tcwdbdbgfd(TCWDB *wdb);
bool tcwdbmemsync(TCWDB *wdb, int level);
bool tcwdbcacheclear(TCWDB *wdb);
uint64_t tcwdbinode(TCWDB *wdb);
time_t tcwdbmtime(TCWDB *wdb);
uint8_t tcwdbopts(TCWDB *wdb);
uint32_t tcwdbfwmmax(TCWDB *wdb);
uint32_t tcwdbcnum(TCWDB *wdb);
void tcwdbsetsynccb(TCWDB *wdb, bool (*cb)(int, int, const char *, void *), void *opq);
void tcwdbsetaddcb(TCWDB *wdb, bool (*cb)(const char *, void *), void *opq);